Fix main page layout bug

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -3,9 +3,16 @@
 @button_height: 100px;
 @button_width: 150px;
 
+#card-container {
+    width: 0;
+}
+
+#spec-container {
+    left: 0;
+}
+
 #class-list {
     text-align: center;
-    width: 85%;
 
     .class-item,
     .class-item:hover {
